--- a/packages/frappe-components/src/theme.css
+++ b/packages/frappe-components/src/theme.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap");
+
 @config '../../../tailwind.config.cjs';
 
 @custom-variant dark (&:is(.dark *));
