Fix tailwind extend.json

--- a/packages/frappe-ui-react/src/theme.css
+++ b/packages/frappe-ui-react/src/theme.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 
 @config './utils/tailwind.config.cjs';
+@source './components';
 
 @custom-variant dark (&:is(.dark *));
 
