--- a/packages/frappe-ui-react/src/theme.css
+++ b/packages/frappe-ui-react/src/theme.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
+@import './components/texteditor/style.css';
 
 @config './utils/tailwind.config.cjs';
 @source './components';
@@ -735,14 +736,5 @@ input {
     --shadow-2xl: 0px 0px 1px rgba(0, 0, 0, 0.6),
       0px 1px 3px rgba(0, 0, 0, 0.15), 0px 10px 24px -3px rgba(0, 0, 0, 0.3);
   }
-
-  /* For tip tap place holder to appear */
-  .tiptap p.is-editor-empty:first-child::before {
-  color: #adb5bd;
-  content: attr(data-placeholder);
-  float: left;
-  height: 0;
-  pointer-events: none;
-}
 
 }
